# simple-discord-tts

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  compose.prod.yml  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
simple_discord_tts/: app.py  attachment.py  exceptions.py  main.py  settings.py  text.py  tts.py
simple_discord_tts/cogs/: __init__.py  admin_commands.py  clear_command.py  read_queue_task.py  vc_command.py  voice_state_listener.py
tests/: test_attachment.py  test_text.py
